--- a/asignaturas-servicio.properties
+++ b/asignaturas-servicio.properties
@@ -1,3 +1,14 @@
-server.port=8082
 spring.application.name=asignaturas-servicio
+server.port=8082
+
+spring.datasource.url=jdbc:h2:mem:asignaturasdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
