--- a/matriculas-servicio.properties
+++ b/matriculas-servicio.properties
@@ -1,3 +1,13 @@
-server.port=8083
 spring.application.name=matriculas-servicio
+server.port=8083
+
+spring.datasource.url=jdbc:h2:mem:matriculasdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
