--- a/usuarios-servicio.properties
+++ b/usuarios-servicio.properties
@@ -1,3 +1,24 @@
-server.port=8081
 spring.application.name=usuarios-servicio
+
+logging.level.root=DEBUG
+
+# Puerto
+server.port=8081
+
+# Configuración H2
+spring.datasource.url=jdbc:h2:mem:usuariosdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# JWT
+jwt.secret=clave-super-secreta
+jwt.expiration=3600000
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
