Archivos de configuración para microservicio

--- a/usuarios-servicio.properties
+++ b/usuarios-servicio.properties
@@ -1,6 +1,9 @@
 spring.application.name=usuarios-servicio
 
 logging.level.root=DEBUG
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
 
 # Puerto
 server.port=8081
