--- a/asignaturas-servicio.properties
+++ b/asignaturas-servicio.properties
@@ -10,5 +10,8 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
